--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -28,13 +28,13 @@ With GPyOpt you can:
 <p> </p>
 
 <p  style="text-indent: 7em;">
-<li> <b>Solve global optimization problems</b> using Gaussian processes as surrogate models. </li>
+<li> <b>Solve global optimization problems</b> with Bayesian optimization. </li>
 <p> </p>
-<li> <b>Import all GPy functionalities</b> in your optimization. Choose between a large variety of kernels, kernel combinations, likelihoods, etc.</li>
+<li> <b>Import all GPy functionalities</b>: Choose between a large variety of kernels, kernel combinations, likelihoods, models, etc.</li>
 <p> </p>
-<li> <b>Run Parallel optimization methods </b> and make use of all your computational resources and design batches of wetlab experiments.  </li>
+<li> <b>Run optimization methods in parallel </b> and make use of all your computational resources. Design batches of wetlab experiments.  </li>
 <p> </p>
-<li> <b>Run Big Data optimization</b> and use sparse Gaussian process and use Bayesian optimization with massive datasets in complex problems.</li>
+<li> <b>Solve Big-Data optimization problems </b> using sparse Gaussian process.</li>
 </p>
 
 <p> </p>
@@ -70,12 +70,12 @@ echo 'PYTHONPATH=$PYTHONPATH:~/SheffieldML' >> ~/.bashrc
 <p> </p>
 
 <p> </p>
-<h2>Reference Manual </h2>
+<h2> Documentation </h2>
 
 <b>General users</b>: check the collection of <a href=" http://sheffieldml.github.io/GPyOpt/doc/_build/html" > notebooks. </a>
 
 <p> </p>
-<b>For Developers</b>: check the online <a href=" http://sheffieldml.github.io/GPyOpt/doc/_build/html"> documentation. </a>
+<b>Code developers</b>: check the online <a href=" http://sheffieldml.github.io/GPyOpt/doc/_build/html"> documentation. </a>
 
 <p> </p>
 <h2> GPyOpt in...</h2>
@@ -88,7 +88,7 @@ GPyOpt is free and runs under BSD 3-clause license. Please cite
   year = {2015}
 }
 </pre></code>
-if you use the package. We will be very happy to include you in the following list of GPyOpt applications:
+if you use the package. If you contact us, we will be very happy to include you in the following list of GPyOpt applications:
 <p> </p>
 <li> Javier González, Joseph Longworth, David James, Neil Lawrence. Bayesian Optimization for synthetic gene design. The Neural Information Processing Systems (NIPS'14), Workshop in Bayesian Optimization, 2014.  </li>
 
@@ -98,6 +98,9 @@ if you use the package. We will be very happy to include you in the following li
 
 <li>  <b>May, 2015</b>: The first release of GPyOpt will be available online.</li>
 
+<p> </p>
+<h2> Contact </h2>
+The code of GPyOpt is under active development. We'd love to here of any bugs you have found. Please submit any issue or question through our GPyOpt issues page. 
 
 
 	{{ content }}
