--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -52,10 +52,10 @@ echo 'PYTHONPATH=$PYTHONPATH:~/SheffieldML' >> ~/.bashrc
 <p> </p>
 <h2> Documentation </h2>
 
-<b>General users</b>: check the collection of <a href="https://github.com/SheffieldML/GPyOpt/tree/master/manual"> notebooks </a> and run the <a href="https://github.com/SheffieldML/GPyOpt/tree/master/GPyOpt/demos"> demos. </a>
+<b>General users</b>: check the collection of <a href="http://nbviewer.ipython.org/github/SheffieldML/GPyOpt/blob/master/manual/index.ipynb"> notebooks </a> and run the <a href="https://github.com/SheffieldML/GPyOpt/tree/master/GPyOpt/demos"> demos. </a>
 
 <p> </p>
-<b>Code developers</b>: check the online <a href=" http://sheffieldml.github.io/GPyOpt/doc/_build/html"> documentation. </a>
+<b>Code developers</b>: check the online <a href="http://gpyopt.readthedocs.org/en/latest/GPyOpt.html"> documentation. </a>
 
 <p> </p>
 <h2> GPyOpt in...</h2>
