--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -55,7 +55,7 @@ echo 'PYTHONPATH=$PYTHONPATH:~/SheffieldML' >> ~/.bashrc
 <b>General users</b>: check the collection of <a href="http://nbviewer.ipython.org/github/SheffieldML/GPyOpt/blob/master/manual/index.ipynb"> notebooks </a> and run the <a href="https://github.com/SheffieldML/GPyOpt/tree/master/GPyOpt/demos"> demos. </a>
 
 <p> </p>
-<b>Code developers</b>: check the online <a href="http://gpyopt.readthedocs.org/en/latest/GPyOpt.html"> documentation. </a>
+<b>Code developers</b>: check the online <a href="http://pythonhosted.org/GPyOpt"> documentation. </a>
 
 <p> </p>
 <h2> GPyOpt in...</h2>
